# hermes-pack

./: .gitignore  README.md  bundled-skills.txt  exclude-patterns.txt  exclude-skills.txt  hermes-pack.sh  install.sh
mcp/: README.md  pyproject.toml  server.py
