[project]
name = "hermes-pack-mcp"
version = "0.1.0"
description = "MCP server for hermes-pack: backup/restore Hermes agent environment"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
